[ADD] Buttons to library // [ADD] Quit button to menu // [ADD] Font assets

--- a/lib/csfml/Makefile
+++ b/lib/csfml/Makefile
@@ -6,6 +6,9 @@
 ##
 
 SRC		= 	button.c 					\
+			button_draw.c 				\
+			button_move.c 				\
+			button_event.c 				\
 			init_objects.c 				\
 			scale_object.c 				\
 			clock.c 					\
