--- a/lib/my/Makefile
+++ b/lib/my/Makefile
@@ -62,7 +62,8 @@ SRC			=	my_put_nbr.c				\
 				my_str_contains_only.c		\
 				my_memset.c					\
 				my_malloc_array.c			\
-				my_array_contains.c
+				my_array_contains.c			\
+				my_hay_needle.c
 
 PRINTF		=	printf/my_printf.c					\
 				printf/my_printf_number.c			\
